all alignments fixed frfr

--- a/HMWRK/FinalProj/navbar.css
+++ b/HMWRK/FinalProj/navbar.css
@@ -117,7 +117,7 @@ nav a {
         margin: 0px;
         text-align: center;
         display: inline-block;
-        margin: 11px;
+        margin: 0px;
         width: 100%;
 }
 .footer img{
