--- a/HMWRK/FinalProj/reset.css
+++ b/HMWRK/FinalProj/reset.css
@@ -46,9 +46,10 @@ Add responsiveness - on screens less than 500px, make the navigation links appea
     color: white;
     text-align: center;
     position: relative;
-    margin: 60px auto 90px;
+    margin: 60px auto 150px;
     padding-top: 12px;
     padding-bottom: 12px;
+    padding: 0px;
 }
 
 .title{
@@ -56,8 +57,8 @@ Add responsiveness - on screens less than 500px, make the navigation links appea
     font-size: 18px;
     font-family: 'Maven Pro', sans-serif;
     color: white;
-    padding-top: 12px;
-	padding-bottom: 12px;
+    padding-top: 0px;
+	padding-bottom: 0px;
 }
 
 .donate-button p{
@@ -172,9 +173,9 @@ Add responsiveness - on screens less than 500px, make the navigation links appea
   }
   
   
-  * {
+  /* * {
     box-sizing: border-box;
-  }
+  } */
   
   /* Create four equal columns that floats next to each other */
   .column {
